fixed header spacing and logo

--- a/10-hotel/css/styles.css
+++ b/10-hotel/css/styles.css
@@ -348,6 +348,7 @@ header div {
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 0.5rem;
 }
 header h1 {
   font-family: "Young Serif", serif;
