--- a/10-hotel/scss/_small.scss
+++ b/10-hotel/scss/_small.scss
@@ -34,6 +34,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: .5rem;
   }
 
   h1 {
